orthographic projection in viz utils can now handle dcsm extent

--- a/notebooks/02-explore-satellite-map.ipynb
+++ b/notebooks/02-explore-satellite-map.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "## Explore satellite tracks on map\n",
-    "- imports some scripts from ../src/"
+    "- imports some scripts from ../src/\n",
+    "- plot tracks on map\n",
+    "- plot timeseries"
    ]
   },
   {
@@ -543,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -571,12 +573,14 @@
     "\n",
     "# Custom orhtographic projection\n",
     "custom_lat_formatter = setup_custom_lat_formatter()\n",
-    "noProj, myProj = create_projection()\n",
+    "noProj, myProj = create_projection(model_extent='small') # or model_exten='dcsm' for larger domain\n",
     "offset = -4\n",
     "fig = plt.figure(figsize=(3.5433,2.6)) # (3.5433, 2.6)\n",
     "ax = fig.add_subplot(1, 1, 1, projection=myProj)\n",
     "ax, gl = add_features(ax)\n",
-    "polygon1s = plot_zebra_border(ax, noProj, myProj)\n",
+    "extent = [-5, 13, 50, 62]  # Set the desired extent\n",
+    "polygon1s = plot_zebra_border(ax, noProj, myProj, extent, model_extent='small')  # or model_exten='dcsm' for larger domain\n",
+    "\n",
     "\n",
     "# Settings\n",
     "CBAR_SHRINK = 0.9\n",
